fix: allow seeing full feed item even when long
Some feeds have very long names like "Study Hacks - Decoding Patterns of
Success - Cal Newport". On mobile, this in some cases caused the link
not to be clickable since it was truncated. This is now fixed by
splitting the item over 2 lines.

--- a/fx/src/static/style.css
+++ b/fx/src/static/style.css
@@ -63,10 +63,15 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
     color: var(--accent);
+    text-decoration: none;
 }
 
 a:visited {
     color: var(--accent);
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 a.url {
